WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
261437
[motion-path] Offset path inset shape tests with border-radius are failing
https://bugs.webkit.org/show_bug.cgi?id=261437
Summary
[motion-path] Offset path inset shape tests with border-radius are failing
Nikos Mouchtaris
Reported
2023-09-11 15:17:52 PDT
imported/w3c/web-platform-tests/css/motion/offset-path-shape-inset-002.html imported/w3c/web-platform-tests/css/motion/offset-path-shape-xywh-002.html imported/w3c/web-platform-tests/css/motion/offset-path-shape-rect-002.html
Attachments
Add attachment
proposed patch, testcase, etc.
Nikos Mouchtaris
Comment 1
2023-09-11 15:22:03 PDT
rdar://115316728
Tim Nguyen (:ntim)
Comment 2
2023-09-19 06:42:53 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/17913
Tim Nguyen (:ntim)
Comment 3
2023-09-19 06:46:38 PDT
Submitted web-platform-tests pull request:
https://github.com/web-platform-tests/wpt/pull/42052
EWS
Comment 4
2023-09-20 04:33:42 PDT
Committed
268192@main
(07d04d5b029f): <
https://commits.webkit.org/268192@main
> Reviewed commits have been landed. Closing PR #17913 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug