[motion-path] Inset shape tests with border-radius are failing https://bugs.webkit.org/show_bug.cgi?id=261437 rdar://115316728

Reviewed by Darin Adler.

By default, `addRoundedRect` will use `PathRoundedRect::Strategy::PreferNative`, which will change the starting position of the path as soon as border-radius is found.

While the starting position doesn't affect clip-path rendering, it does affect motion path. Switch to `PathRoundedRect::Strategy::PreferBezier` so `addRoundedRect` returns
a path with a consistent starting point (top left corner) regardless of border-radius.

This affects all inset shapes (inset, rect, xywh).

* LayoutTests/TestExpectations:
* LayoutTests/css3/masking/clip-path-border-radius-border-box-000.html:
* LayoutTests/css3/masking/clip-path-border-radius-content-box-001.html:
* LayoutTests/css3/masking/clip-path-border-radius-fill-box-001.html:
* LayoutTests/css3/masking/clip-path-border-radius-padding-box-001.html:
* LayoutTests/css3/masking/clip-path-border-radius-stroke-box-000.html:
* LayoutTests/css3/masking/clip-path-border-radius-view-box-000.html:
* LayoutTests/css3/masking/clip-path-inset.html:
* LayoutTests/imported/w3c/web-platform-tests/css/motion/offset-path-shape-inset-002.html:
* LayoutTests/imported/w3c/web-platform-tests/css/motion/offset-path-shape-rect-002.html:
* LayoutTests/imported/w3c/web-platform-tests/css/motion/offset-path-shape-xywh-002.html:
* Source/WebCore/rendering/style/BasicShapes.cpp:
(WebCore::RoundedRectPathPolicy::createValueForKey):
* Source/WebCore/rendering/MotionPath.cpp:
(WebCore::MotionPath::motionPathDataForRenderer): Drive-by cleanup

Canonical link: https://commits.webkit.org/268192@main