Source/WebCore/rendering/MotionPath.cpp
@@ -65,7 +65,7 @@ std::optional<MotionPathData> MotionPath::motionPathDataForRenderer(const Render
         if (offsetPosition.x().isNormal())
             return normalPositionForOffsetPath(pathOperation, referenceRect);
         // If offset-position is auto, use top / left corner of the box.
-        if (offsetPosition.x().isAuto() && offsetPosition.y().isAuto())
+        if (offsetPosition.x().isAuto())
             return offsetFromContainer(renderer, container, referenceRect);
         return floatPointForLengthPoint(offsetPosition, referenceRect.size());
     };
